--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,4 +2,9 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <EditTextPreference
+        android:key="web_server_address"
+        android:title="@string/webServerAddress"
+        android:defaultValue="@string/defaultWebServerAddress" />
+
 </PreferenceScreen>
